# betfunsports-telegram-bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/bfs_bot/: __init__.py  client.py  main.py  mcp_wrapper.py  notify.py
