[project]
name = "bfs-bot"
version = "2.0.0"
description = "Telegram notifications for betfunsports MCP agent"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "aiogram>=3.20.0",
]

[project.scripts]
bfs-bot = "bfs_bot.main:main"
bfs-log = "bfs_bot.client:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
